<resources>
    <string name="app_name">Shoe Store</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_email">Email</string>
    <string name="email_hint">Enter your email</string>
    <string name="password_label">Password</string>
    <string name="password_hint">Enter your password</string>
    <string name="label_welcome">Welcome to Shoe Store</string>
    <string name="get_started">Get Started</string>
    <string name="label_two_welcome_screeen">Explore the best shoes around the world</string>
    <string name="instruction_text">
        1. Bring your own Shoes into the market
        \n\n2. Fast Delivery
        \n\n3. Best Quality Shoes in the market </string>
    <string name="text_instruction">Shoe Store</string>
    <string name="image_instruction_screen">image_instruction_screen</string>
    <string name="sign_in">Sign in</string>
    <string name="or">OR</string>
    <string name="register">Register</string>
    <string name="go_to_inventory">Go to Inventory</string>
</resources>