<?xml version="1.0" encoding="utf-8"?>
<layout>

    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Instruction">

        <TextView
            android:id="@+id/label_instruction_one"
            style="@style/text_label_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="20dp"
            android:text="@string/text_instruction"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="#689F38"

            android:textStyle="italic" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="273dp"
            android:layout_marginTop="60dp"
            android:contentDescription="@string/image_instruction_screen"
            android:padding="60dp"
            android:src="@drawable/sneakers" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            style="@style/text_label_style"
            android:layout_marginTop="380dp"
            android:lineSpacingMultiplier="1.2"
            android:text="@string/instruction_text"
            android:textAlignment="center" />
    </FrameLayout>
</layout>