<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="ViewModel"
            type="com.example.shoestore.LoginViewModel" />
    </data>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".Login">

        <TextView
            android:id="@+id/label_email"
            style="@style/text_label_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="100dp"
            android:text="@string/label_email" />

        <EditText
            android:id="@+id/email_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="10dp"
            android:ems="10"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:paddingTop="16dp" />

        <TextView
            android:id="@+id/label_password"
            style="@style/text_label_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/password_label" />

        <EditText
            android:id="@+id/password_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="10dp"
            android:ems="10"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:paddingTop="16dp" />

        <Button
            android:id="@+id/button_signIn"
            style="@style/button_style"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"


            android:text="Sign in " />

        <TextView
            android:id="@+id/textView3"
            style="@style/text_label_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center"
            android:paddingTop="10dp"

            android:text="OR" />

        <Button
            android:id="@+id/button_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/roboto_condensed_bold"
            android:padding="16dp"
            android:text="Register "
            android:textColor="@color/black"
            android:textStyle="bold" />
    </LinearLayout>
</layout>